fix: website logo alignment

--- a/src/styles/Navbar.scss
+++ b/src/styles/Navbar.scss
@@ -15,28 +15,30 @@
       display: none;
     }
 
-    .logo-img-container {
-      display: flex;
-      justify-content: flex-start;
-      gap: 10px;
-      padding-left: 2.5rem;
-
-      .logo-img {
-        max-height: 2.5rem;
-        width: auto;
-      }
-
-      .nav-title {
-        margin: 0px;
+    .website-logo-container {
+      .logo-img-container {
         display: flex;
-        align-items: center;
-        min-width: 200px;
-        animation: swing;
-        animation-duration: 1s;
+        justify-content: flex-start;
+        gap: 10px;
+        padding-left: 2.5rem;
 
-        &:hover {
-          animation: pulse;
-          animation-duration: 1s; /* don't forget to set a duration! */
+        .logo-img {
+          max-height: 2.5rem;
+          width: auto;
+        }
+
+        .nav-title {
+          margin: 0px;
+          display: flex;
+          align-items: center;
+          min-width: 200px;
+          animation: swing;
+          animation-duration: 1s;
+
+          &:hover {
+            animation: pulse;
+            animation-duration: 1s; /* don't forget to set a duration! */
+          }
         }
       }
     }
@@ -190,9 +192,12 @@
   }
 }
 
-// mobile
-
 //mobile view
+@media (max-width: 925px) {
+  .container {
+    margin-left: 30px;
+  }
+}
 @media (max-width: 820px) {
   .nav {
     min-width: 270px;
@@ -200,6 +205,7 @@
 
     .container {
       gap: 0;
+      margin-left: 0px;
 
       .hamburger-menu {
         display: flex;
@@ -214,7 +220,7 @@
         }
 
         .logo-img {
-          max-height: 1.8rem;
+          max-height: 2rem !important;
           width: auto;
           padding-bottom: 5px;
         }
@@ -281,7 +287,6 @@
       .navbar-right {
         padding-right: 1rem;
         gap: 0.5rem;
-        // justify-content: flex-start;
 
         .avatar {
           height: 2rem;
